# ghc-typelits-sopsat

./: CHANGELOG.md  LICENSE  README.md  ghc-typelits-sopsat.cabal
src/GHC/TypeLits/: SoPSat.hs
test/: ErrorTests.hs  Tests.hs
