cabal-version:      3.0
name:               ghc-typelits-sopsat
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Aleksandr Pokatilov
maintainer:         pokatilov0802@gmail.com
-- copyright:
category:           Type System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  GHC.TypeLits.SoPSat
    -- other-modules:
    -- other-extensions:
    build-depends:    base                >=4.16.0.0,
                      containers          >=0.5 && <0.7,
                      transformers         >=0.5,
                      ghc                  >=9.4 && <9.8,
                      ghc-tcplugin-api     >=0.15.0,
                      ghc-tcplugins-extra ^>=0.4.1,
                      sop-satisfier        >=0.3.4.4
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite ghc-typelits-sopsat-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    ErrorTests
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Tests.hs
    if impl(ghc >= 9.4)
       build-depends:
        ghc-prim >= 0.9
    build-depends:
        base >=4.16.0.0,
        template-haskell >=2.19.0.0,
        tasty ^>=1.5,
        tasty-hunit ^>=0.9,
        ghc-typelits-sopsat
